에뮤에라 컨피그 수정(세이브 데이터 UTF-8 형식으로 저장)

--- a/EMUERA.CONFIG
+++ b/EMUERA.CONFIG
@@ -52,7 +52,7 @@ CALLNAMEが空文字列の時にNAMEを代入する:NO
 擬似変数RANDの仕様をeramakerに合わせる:NO
 関数・属性については大文字小文字を無視しない:NO
 全角スペースをホワイトスペースに含める:NO
-セーブデータをUTF-8で保存する:NO
+セーブデータをUTF-8で保存する:YES
 ver1739以前の非ボタン折り返しを再現する:NO
 内部で使用する東アジア言語:JAPANESE
 ONEINPUT系命令でマウスによる2文字以上の入力を許可する:NO
