의상 관련 폴더 번역

--- a/EMUERA.CONFIG
+++ b/EMUERA.CONFIG
@@ -65,3 +65,6 @@ FORM中の三連記号を展開しない:YES
 TIMESの計算をeramakerにあわせる:NO
 キャラクタ変数の引数を補完しない:NO
 文字列変数の代入に文字列式を強制する:NO
+イメージチェック無視:YES
+キャラクターチェック無視:YES
+ezEmueraIsRun:YES
