글자 정렬 수정 및 폰트 사이즈 조정

--- a/EMUERA.CONFIG
+++ b/EMUERA.CONFIG
@@ -16,11 +16,11 @@ _Replace.csvを利用する:YES
 起動時のウィンドウ位置を指定する:YES
 起動時にウィンドウを最大化する:NO
 履歴ログの行数:5000
-PRINTCを並べる数:3
+PRINTCを並べる数:4
 PRINTCの文字数:25
 フォント名:굴림체
 フォントサイズ:14
-一行の高さ:17
+一行の高さ:15
 文字色:192,192,192
 背景色:0,0,0
 選択中文字色:255,255,0
@@ -54,7 +54,7 @@ CALLNAMEが空文字列の時にNAMEを代入する:NO
 全角スペースをホワイトスペースに含める:NO
 セーブデータをUTF-8で保存する:YES
 ver1739以前の非ボタン折り返しを再現する:NO
-内部で使用する東アジア言語:JAPANESE
+内部で使用する東アジア言語:KOREAN
 ONEINPUT系命令でマウスによる2文字以上の入力を許可する:NO
 イベント関数のCALLを許可する:NO
 SPキャラを使用する:NO
